syntax = "proto3";

package protodb;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/ygrpc/protodb";

message PDBFile {
  // name style(msg & field)
  // empty='go': default, go name style, better performance in crud operation in
  // go (like: UserName) 'snake': snake name style (like: user_name)
  string NameStyle = 6;
}

message PDBMsg {
  // when table primary key include more than one field,need specify the primary
  // key in pdbmsg
  repeated string PrimaryKeys = 1;

  // sql prepends before create table
  repeated string SQLPrepends = 2;

  // sql appends before )
  repeated string SQLAppends = 3;

  // sql appends after ) before ;
  repeated string SQLAppendsAfter = 4;

  // sql appends after ;
  repeated string SQLAppendsEnd = 5;

  // generate proto msg {{msg}}List in  xxx.list.proto
  // 0: auto if msg name start with db then generate {{msg}}List
  // 1: always generate {{msg}}List
  // 4: never generate {{msg}}List
  int32 MsgList = 6;

}

message PDBField {
  // do not generate db field in create table
  // when in update, do not update this field
  bool NotDB = 1;

  // is primary key
  bool IsPrimary = 2;

  // is unique key
  bool IsUnique = 3;

  // is not null
  bool IsNotNull = 4;

  // reference to other table, sql like:  REFERENCES other_table(other_field)
  string Reference = 5;

  // default value
  string DefaultValue = 6;

  // append sql before ,
  repeated string SQLAppends = 7;

  // append sql after ,
  repeated string SQLAppendsEnd = 8;

  // db no update
  // when in update, do not update this field, for example, create time
  bool NoUpdate = 9;

  // serial type 0:not serial type 1:smallint 4:int 8:bigint
  // strong advice not use serial type,it's hard in distributed system
  int32 SerialType = 10;
}

extend google.protobuf.FileOptions { optional PDBFile pdbf = 1888; }

extend google.protobuf.MessageOptions { optional PDBMsg pdbm = 1888; }

extend google.protobuf.FieldOptions { optional PDBField pdb = 1888; }